# tensorflow_catkin

./: CMakeLists.txt  README.md
patches/: fix_cudnn_gunit.patch  fix_cupti_nccl_include.patch
